Standalone mobile sheet overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,9 @@
 	.safe-top {
 		padding-top: env(safe-area-inset-top);
 	}
+	.safe-top-as-margin {
+		margin-top: env(safe-area-inset-top);
+	}
 }
 
 .balance {
